test/parser.d/invalid/ass6.surc.bad
f(x: Integer): Integer = fndo
	n: Integer = 3
	n: Integer = 7
	return i
